# infra

./: .gitignore  docker-compose.yml
.github/workflows/: api-AutoDeployTrigger-bf93ef51-5d33-41f6-8ef7-67590a7bada1.yml  bar.yml  build-and-deploy.yml  build-and-publish-docker-ghcr.yml  build-and-publish-docker-image.yml  build-api.yml  build-dashboard.yml  build-knowledge.yml  ca-aiasst-search-stag-eus-AutoDeployTrigger-586e7034-55b5-4223-81c2-726144045db5.yml  deploy-api.yml  deploy-azure-container-app.yml  deploy-dashboard.yml  deploy-knowledge.yml  docker-build-and-push.yml  docker-publish.yml  foo.yml  internal-api-deploy.yml  migrate-database.yml  migrate-db-staging.yml  publish-chat-ui.yml  reusable-migrate-database.yml
api/: pyproject.toml
api/src/: main.py
assistant/: .dockerignore  .gitignore  Dockerfile  assistant.sln
chat-ui/: .gitignore  .prettierrc  eslint.config.js  index.html  index.ts  package.json  tsconfig.json  tsconfig.stories.json  vite.config.ts
chat-ui/demo/: index.html
chat-ui/src/: MyButton.ts  declarations.d.ts  index.ts  styles.ts
dashboard/: .dockerignore  Dockerfile  default.conf.template
etl-job/: Dockerfile  README.md  main.py  pyproject.toml
etl-job/src/core/: config.py
infrastructure/: cognitive-services.bicep  main.bicep
infrastructure/aca-env/: aca-env.bicep
infrastructure/assistant-api-identity/: assistant-api-identity.bicep
infrastructure/assistant-api-roles-keyvault/: assistant-api-roles-keyvault.bicep
init-db/: seed.sql
internal-api/: Dockerfile
knowledge-search/: .dockerignore  pyproject.toml
(+82 files in other folders)
